{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 224,
  "lineage": "18b5000d-fa67-f650-e893-438052692095",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6e8ef8b9e347263",
            "association_id": "eipassoc-01b1708c9707ae8b6",
            "domain": "vpc",
            "id": "eipalloc-0f6e8ef8b9e347263",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01aaf86ad3f655e33",
            "private_dns": "ip-172-17-2-126.us-west-2.compute.internal",
            "private_ip": "172.17.2.126",
            "public_dns": "ec2-52-10-131-13.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.131.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-vpc-nat-gateway-eip-0"
            },
            "tags_all": {
              "Name": "development-vpc-nat-gateway-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d80cac9463e41b9",
            "association_id": "eipassoc-046b1b444c6fb48a3",
            "domain": "vpc",
            "id": "eipalloc-09d80cac9463e41b9",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0294b16917c2a0d82",
            "private_dns": "ip-172-17-3-71.us-west-2.compute.internal",
            "private_ip": "172.17.3.71",
            "public_dns": "ec2-34-223-193-14.us-west-2.compute.amazonaws.com",
            "public_ip": "34.223.193.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-vpc-nat-gateway-eip-1"
            },
            "tags_all": {
              "Name": "development-vpc-nat-gateway-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:internet-gateway/igw-080296b7bf579d798",
            "id": "igw-080296b7bf579d798",
            "owner_id": "835225720278",
            "tags": {
              "Name": "development-vpc-igw"
            },
            "tags_all": {
              "Name": "development-vpc-igw"
            },
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "dependencies": [
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6e8ef8b9e347263",
            "association_id": "eipassoc-01b1708c9707ae8b6",
            "connectivity_type": "public",
            "id": "nat-02ae83c4c1a7feb57",
            "network_interface_id": "eni-01aaf86ad3f655e33",
            "private_ip": "172.17.2.126",
            "public_ip": "52.10.131.13",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0266365db3fec048c",
            "tags": {
              "Name": "development-vpc-nat-gateway-0"
            },
            "tags_all": {
              "Name": "development-vpc-nat-gateway-0"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d80cac9463e41b9",
            "association_id": "eipassoc-046b1b444c6fb48a3",
            "connectivity_type": "public",
            "id": "nat-0bcc40a7744a3412c",
            "network_interface_id": "eni-0294b16917c2a0d82",
            "private_ip": "172.17.3.71",
            "public_ip": "34.223.193.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-015180b0f8fa20cc1",
            "tags": {
              "Name": "development-vpc-nat-gateway-1"
            },
            "tags_all": {
              "Name": "development-vpc-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080296b7bf579d798",
            "id": "r-rtb-00d5486da8ade8e281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d5486da8ade8e28",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:route-table/rtb-066880026b2d8c50d",
            "id": "rtb-066880026b2d8c50d",
            "owner_id": "835225720278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ae83c4c1a7feb57",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-vpc-nat-gateway-route-table-0"
            },
            "tags_all": {
              "Name": "development-vpc-nat-gateway-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:route-table/rtb-07de55bffc7b142db",
            "id": "rtb-07de55bffc7b142db",
            "owner_id": "835225720278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bcc40a7744a3412c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-vpc-nat-gateway-route-table-1"
            },
            "tags_all": {
              "Name": "development-vpc-nat-gateway-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a9d937b53c53e1a",
            "route_table_id": "rtb-066880026b2d8c50d",
            "subnet_id": "subnet-0457bcdb2a3e1e6f8"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a58114c36239915",
            "route_table_id": "rtb-07de55bffc7b142db",
            "subnet_id": "subnet-0fb2ff0d0fa62a38b"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora-serverless_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:security-group/sg-0fb4ea9344c1a84d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb4ea9344c1a84d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "development-vpc-aurora-serverless-sg",
            "name_prefix": "",
            "owner_id": "835225720278",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:subnet/subnet-0457bcdb2a3e1e6f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0457bcdb2a3e1e6f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835225720278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-vpc-private-subnet-0"
            },
            "tags_all": {
              "Name": "development-vpc-private-subnet-0"
            },
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:subnet/subnet-0fb2ff0d0fa62a38b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb2ff0d0fa62a38b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835225720278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "development-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:subnet/subnet-0266365db3fec048c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0266365db3fec048c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835225720278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-vpc-public-subnet-0"
            },
            "tags_all": {
              "Name": "development-vpc-public-subnet-0"
            },
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:subnet/subnet-015180b0f8fa20cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015180b0f8fa20cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835225720278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "development-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0205b83f05483ab3c"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835225720278:vpc/vpc-0205b83f05483ab3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-03cc5a85e2bb82a4a",
            "default_route_table_id": "rtb-00d5486da8ade8e28",
            "default_security_group_id": "sg-03575e54a71cf0eba",
            "dhcp_options_id": "dopt-03e47180b290e899c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0205b83f05483ab3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d5486da8ade8e28",
            "owner_id": "835225720278",
            "tags": {
              "Name": "development-vpc-vpc"
            },
            "tags_all": {
              "Name": "development-vpc-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}